--- a/ShadowPeople/ShadowPeople.vcxproj
+++ b/ShadowPeople/ShadowPeople.vcxproj
@@ -144,8 +144,10 @@
     <ClCompile Include="Math.cpp" />
     <ClCompile Include="rendering\Camera.cpp" />
     <ClCompile Include="rendering\GeometryCache.cpp" />
+    <ClCompile Include="rendering\Image.cpp" />
     <ClCompile Include="rendering\ImageBuffers.cpp" />
     <ClCompile Include="rendering\ImGuiRenderer.cpp" />
+    <ClCompile Include="rendering\MaterialCache.cpp" />
     <ClCompile Include="rendering\Mesh.cpp" />
     <ClCompile Include="rendering\Scene.cpp" />
     <ClCompile Include="rendering\SceneRenderer.cpp" />
@@ -154,6 +156,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="asset\AssetLoader.hpp" />
+    <ClInclude Include="cpugpu\GeometryTypes.h" />
+    <ClInclude Include="cpugpu\ShaderInterface.h" />
     <ClInclude Include="dx11\BufferImpl.hpp" />
     <ClInclude Include="dx11\BufferViewImpl.hpp" />
     <ClInclude Include="dx11\CommandBufferImpl.hpp" />
@@ -187,8 +191,10 @@
     <ClInclude Include="Math.hpp" />
     <ClInclude Include="rendering\Camera.hpp" />
     <ClInclude Include="rendering\GeometryCache.hpp" />
+    <ClInclude Include="rendering\Image.hpp" />
     <ClInclude Include="rendering\ImageBuffers.hpp" />
     <ClInclude Include="rendering\ImGuiRenderer.hpp" />
+    <ClInclude Include="rendering\MaterialCache.hpp" />
     <ClInclude Include="rendering\Mesh.hpp" />
     <ClInclude Include="rendering\Scene.hpp" />
     <ClInclude Include="rendering\SceneRenderer.hpp" />
@@ -196,9 +202,7 @@
     <ClInclude Include="ShaderResourcesImpl.hpp" />
     <ClInclude Include="shaders\GeometryRenderer.if.h" />
     <ClInclude Include="shaders\ImGuiRenderer.if.h" />
-    <ClInclude Include="shaders\ShaderInterface.h" />
-    <ClInclude Include="shaders\Test.if.h" />
-    <ClInclude Include="shaders\Test2.if.h" />
+    <ClInclude Include="shaders\Lighting.if.h" />
     <ClInclude Include="Types.hpp" />
   </ItemGroup>
   <ItemGroup>
@@ -223,7 +227,7 @@
     <ClInclude Include="shaders\OctahedralNormal.h.hlsl">
       <FileType>Document</FileType>
     </ClInclude>
-    <FxCompile Include="shaders\Test.cs.hlsl">
+    <FxCompile Include="shaders\Lighting.cs.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Compute</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compute</ShaderType>
@@ -232,18 +236,6 @@
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">4.0</ShaderModel>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Compute</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">4.0</ShaderModel>
-    </FxCompile>
-    <FxCompile Include="shaders\Test2.ps.hlsl">
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
-    </FxCompile>
-    <FxCompile Include="shaders\Test2.vs.hlsl">
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
     </FxCompile>
     <FxCompile Include="shaders\ImGuiRenderer.vs.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
